crates/kula-core/tests/corpus/invalid/rule-01-duplicate-id-cross-kind.kula
person alice name:"Alice" gender:female
person bob   name:"Bob"   gender:male

marriage alice alice bob start:1972-05-12
